--- a/test/sqlrelay.conf
+++ b/test/sqlrelay.conf
@@ -96,7 +96,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="user=testuser;password=testpassword;db=testdb;host=dbmaster.firstworks.com"/>
+			<connection string="user=testuser;password=testpassword;db=testdb;host=dbmaster"/>
 		</connections>
 	</instance>
 
@@ -105,7 +105,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="user=testuser;password=testpassword;db=testdb;host=dbslave.firstworks.com"/>
+			<connection string="user=testuser;password=testpassword;db=testdb;host=dbslave"/>
 		</connections>
 	</instance>
 
