--- a/msvc/setupx64/setupx64.vdproj.in
+++ b/msvc/setupx64/setupx64.vdproj.in
@@ -195,6 +195,12 @@
         }
         "Entry"
         {
+        "MsmKey" = "8:_3089C8C077D4441B847EE38445CF79C2"
+        "OwnerKey" = "8:_UNDEFINED"
+        "MsmSig" = "8:_UNDEFINED"
+        }
+        "Entry"
+        {
         "MsmKey" = "8:_31AFDE74AA614F2A8366AF2A4F55EF59"
         "OwnerKey" = "8:_UNDEFINED"
         "MsmSig" = "8:_UNDEFINED"
@@ -315,6 +321,12 @@
         }
         "Entry"
         {
+        "MsmKey" = "8:_47935E843C6640988E434166D9C6560A"
+        "OwnerKey" = "8:_UNDEFINED"
+        "MsmSig" = "8:_UNDEFINED"
+        }
+        "Entry"
+        {
         "MsmKey" = "8:_4CCAA172BDD54B43966EEBDEA5EE37AF"
         "OwnerKey" = "8:_UNDEFINED"
         "MsmSig" = "8:_UNDEFINED"
@@ -346,6 +358,12 @@
         "Entry"
         {
         "MsmKey" = "8:_53268E8A97FC47EAB969414C7FCF77A9"
+        "OwnerKey" = "8:_UNDEFINED"
+        "MsmSig" = "8:_UNDEFINED"
+        }
+        "Entry"
+        {
+        "MsmKey" = "8:_535BF6805C4041F7BFE1318C09BBD686"
         "OwnerKey" = "8:_UNDEFINED"
         "MsmSig" = "8:_UNDEFINED"
         }
@@ -477,6 +495,12 @@
         }
         "Entry"
         {
+        "MsmKey" = "8:_6D6C7D04D1764C2F8D1DCDC4678288DD"
+        "OwnerKey" = "8:_UNDEFINED"
+        "MsmSig" = "8:_UNDEFINED"
+        }
+        "Entry"
+        {
         "MsmKey" = "8:_6F26793C8FB44E4C9CF3345045598CD5"
         "OwnerKey" = "8:_UNDEFINED"
         "MsmSig" = "8:_UNDEFINED"
@@ -597,6 +621,12 @@
         }
         "Entry"
         {
+        "MsmKey" = "8:_8BEC3801F3E442D2AE096881B615403B"
+        "OwnerKey" = "8:_UNDEFINED"
+        "MsmSig" = "8:_UNDEFINED"
+        }
+        "Entry"
+        {
         "MsmKey" = "8:_8F420B83C65640839A962689548DB821"
         "OwnerKey" = "8:_UNDEFINED"
         "MsmSig" = "8:_UNDEFINED"
@@ -694,6 +724,12 @@
         "Entry"
         {
         "MsmKey" = "8:_AA18B18A7469413DAEB1112654125317"
+        "OwnerKey" = "8:_UNDEFINED"
+        "MsmSig" = "8:_UNDEFINED"
+        }
+        "Entry"
+        {
+        "MsmKey" = "8:_AA6CD62E30DC453FBF84457264AA3FCA"
         "OwnerKey" = "8:_UNDEFINED"
         "MsmSig" = "8:_UNDEFINED"
         }
@@ -1673,6 +1709,26 @@
             "IsDependency" = "11:FALSE"
             "IsolateTo" = "8:"
             }
+            "{1FB2D0AE-D3B9-43D4-B9DD-F88EC61E35DE}:_3089C8C077D4441B847EE38445CF79C2"
+            {
+            "SourcePath" = "8:..\\..\\src\\loggers\\sqlrlogger_sql.dll"
+            "TargetName" = "8:sqlrlogger_sql.dll"
+            "Tag" = "8:"
+            "Folder" = "8:_0CC0967169F54C2998A34CCA57F17B2E"
+            "Condition" = "8:"
+            "Transitive" = "11:FALSE"
+            "Vital" = "11:TRUE"
+            "ReadOnly" = "11:FALSE"
+            "Hidden" = "11:FALSE"
+            "System" = "11:FALSE"
+            "Permanent" = "11:FALSE"
+            "SharedLegacy" = "11:FALSE"
+            "PackageAs" = "3:1"
+            "Register" = "3:1"
+            "Exclude" = "11:FALSE"
+            "IsDependency" = "11:FALSE"
+            "IsolateTo" = "8:"
+            }
             "{1FB2D0AE-D3B9-43D4-B9DD-F88EC61E35DE}:_31AFDE74AA614F2A8366AF2A4F55EF59"
             {
             "SourcePath" = "8:..\\..\\src\\pwdencs\\sqlrpwdenc_sha256.dll"
@@ -2073,6 +2129,26 @@
             "IsDependency" = "11:FALSE"
             "IsolateTo" = "8:"
             }
+            "{1FB2D0AE-D3B9-43D4-B9DD-F88EC61E35DE}:_47935E843C6640988E434166D9C6560A"
+            {
+            "SourcePath" = "8:..\\..\\src\\filters\\sqlrfilter_tag.dll"
+            "TargetName" = "8:sqlrfilter_tag.dll"
+            "Tag" = "8:"
+            "Folder" = "8:_0CC0967169F54C2998A34CCA57F17B2E"
+            "Condition" = "8:"
+            "Transitive" = "11:FALSE"
+            "Vital" = "11:TRUE"
+            "ReadOnly" = "11:FALSE"
+            "Hidden" = "11:FALSE"
+            "System" = "11:FALSE"
+            "Permanent" = "11:FALSE"
+            "SharedLegacy" = "11:FALSE"
+            "PackageAs" = "3:1"
+            "Register" = "3:1"
+            "Exclude" = "11:FALSE"
+            "IsDependency" = "11:FALSE"
+            "IsolateTo" = "8:"
+            }
             "{1FB2D0AE-D3B9-43D4-B9DD-F88EC61E35DE}:_4CCAA172BDD54B43966EEBDEA5EE37AF"
             {
             "SourcePath" = "8:..\\..\\src\\filters\\sqlrfilter_regex.dll"
@@ -2177,6 +2253,26 @@
             {
             "SourcePath" = "8:..\\..\\src\\server\\sqlrelay\\private\\sqlrfilters.h"
             "TargetName" = "8:sqlrfilters.h"
+            "Tag" = "8:"
+            "Folder" = "8:_E9C0F623CBFA470A8EBB6D5F00BE80A7"
+            "Condition" = "8:"
+            "Transitive" = "11:FALSE"
+            "Vital" = "11:TRUE"
+            "ReadOnly" = "11:FALSE"
+            "Hidden" = "11:FALSE"
+            "System" = "11:FALSE"
+            "Permanent" = "11:FALSE"
+            "SharedLegacy" = "11:FALSE"
+            "PackageAs" = "3:1"
+            "Register" = "3:1"
+            "Exclude" = "11:FALSE"
+            "IsDependency" = "11:FALSE"
+            "IsolateTo" = "8:"
+            }
+            "{1FB2D0AE-D3B9-43D4-B9DD-F88EC61E35DE}:_535BF6805C4041F7BFE1318C09BBD686"
+            {
+            "SourcePath" = "8:..\\..\\src\\server\\sqlrelay\\private\\sqlrpostgresqlcredentials.h"
+            "TargetName" = "8:sqlrpostgresqlcredentials.h"
             "Tag" = "8:"
             "Folder" = "8:_E9C0F623CBFA470A8EBB6D5F00BE80A7"
             "Condition" = "8:"
@@ -2613,6 +2709,26 @@
             "IsDependency" = "11:FALSE"
             "IsolateTo" = "8:"
             }
+            "{1FB2D0AE-D3B9-43D4-B9DD-F88EC61E35DE}:_6D6C7D04D1764C2F8D1DCDC4678288DD"
+            {
+            "SourcePath" = "8:..\\..\\src\\directives\\sqlrdirective_crash.dll"
+            "TargetName" = "8:sqlrdirective_crash.dll"
+            "Tag" = "8:"
+            "Folder" = "8:_0CC0967169F54C2998A34CCA57F17B2E"
+            "Condition" = "8:"
+            "Transitive" = "11:FALSE"
+            "Vital" = "11:TRUE"
+            "ReadOnly" = "11:FALSE"
+            "Hidden" = "11:FALSE"
+            "System" = "11:FALSE"
+            "Permanent" = "11:FALSE"
+            "SharedLegacy" = "11:FALSE"
+            "PackageAs" = "3:1"
+            "Register" = "3:1"
+            "Exclude" = "11:FALSE"
+            "IsDependency" = "11:FALSE"
+            "IsolateTo" = "8:"
+            }
             "{1FB2D0AE-D3B9-43D4-B9DD-F88EC61E35DE}:_6F26793C8FB44E4C9CF3345045598CD5"
             {
             "SourcePath" = "8:..\\..\\src\\server\\sqlrelay\\private\\sqlrpwdencs.h"
@@ -3013,6 +3129,26 @@
             "IsDependency" = "11:FALSE"
             "IsolateTo" = "8:"
             }
+            "{1FB2D0AE-D3B9-43D4-B9DD-F88EC61E35DE}:_8BEC3801F3E442D2AE096881B615403B"
+            {
+            "SourcePath" = "8:..\\..\\src\\auths\\sqlrauth_postgresql_userlist.dll"
+            "TargetName" = "8:sqlrauth_postgresql_userlist.dll"
+            "Tag" = "8:"
+            "Folder" = "8:_0CC0967169F54C2998A34CCA57F17B2E"
+            "Condition" = "8:"
+            "Transitive" = "11:FALSE"
+            "Vital" = "11:TRUE"
+            "ReadOnly" = "11:FALSE"
+            "Hidden" = "11:FALSE"
+            "System" = "11:FALSE"
+            "Permanent" = "11:FALSE"
+            "SharedLegacy" = "11:FALSE"
+            "PackageAs" = "3:1"
+            "Register" = "3:1"
+            "Exclude" = "11:FALSE"
+            "IsDependency" = "11:FALSE"
+            "IsolateTo" = "8:"
+            }
             "{1FB2D0AE-D3B9-43D4-B9DD-F88EC61E35DE}:_8F420B83C65640839A962689548DB821"
             {
             "SourcePath" = "8:..\\..\\src\\server\\sqlrelay\\private\\sqlrtlscredentials.h"
@@ -3339,6 +3475,26 @@
             "TargetName" = "8:Cursor.dll"
             "Tag" = "8:"
             "Folder" = "8:_2B661E8D76654C47B3B19E1E26E3CB23"
+            "Condition" = "8:"
+            "Transitive" = "11:FALSE"
+            "Vital" = "11:TRUE"
+            "ReadOnly" = "11:FALSE"
+            "Hidden" = "11:FALSE"
+            "System" = "11:FALSE"
+            "Permanent" = "11:FALSE"
+            "SharedLegacy" = "11:FALSE"
+            "PackageAs" = "3:1"
+            "Register" = "3:1"
+            "Exclude" = "11:FALSE"
+            "IsDependency" = "11:FALSE"
+            "IsolateTo" = "8:"
+            }
+            "{1FB2D0AE-D3B9-43D4-B9DD-F88EC61E35DE}:_AA6CD62E30DC453FBF84457264AA3FCA"
+            {
+            "SourcePath" = "8:..\\..\\src\\protocols\\sqlrprotocol_postgresql.dll"
+            "TargetName" = "8:sqlrprotocol_postgresql.dll"
+            "Tag" = "8:"
+            "Folder" = "8:_0CC0967169F54C2998A34CCA57F17B2E"
             "Condition" = "8:"
             "Transitive" = "11:FALSE"
             "Vital" = "11:TRUE"
