--- a/configure.in
+++ b/configure.in
@@ -1152,7 +1152,29 @@ AC_SUBST(TESTAPIS)
 
 
 HOSTNAME=`hostname | cut -d'.' -f1`
+SHORTHOSTNAME=`echo $HOSTNAME | \
+sed -e "s|^centos|co|" \
+-e "s|^debian|db|" \
+-e "s|^fedora|fc|" \
+-e "s|^freebsd|fb|" \
+-e "s|^haiku|hk|" \
+-e "s|^openbsd|ob|" \
+-e "s|^netbsd|bb|" \
+-e "s|^opensuse|os|" \
+-e "s|^solaris|sl|" \
+-e "s|^syllable|sb|" \
+-e "s|^ubuntu|u|" \
+-e "s|^win|w|" \
+-e "s|alpha$|a|" \
+-e "s|mipsel$|m32|" \
+-e "s|mips64el$|m64|" \
+-e "s|hppa$|hp|" \
+-e "s|i386$|x86|" \
+-e "s|sparc$|s32|" \
+-e "s|sparc64$|s64|" \
+`
 AC_SUBST(HOSTNAME)
+AC_SUBST(SHORTHOSTNAME)
 
 
 MAKELIST="config.mk src/common/defines.h src/server/sqlrelay/private/sqlrshm.h bin/sqlrclient-config bin/sqlrclientwrapper-config bin/sqlrserver-config init/rc.sqlrelay init/rc.sqlrcachemanager init/com.firstworks.sqlrelay.plist init/com.firstworks.sqlrcachemanager.plist sqlrelay-c++.pc sqlrelay-c.pc test/testall.sh test/test.sh test/sqlrelay.conf doc/admin/installingpkg.wt"
