--- a/config.h.in
+++ b/config.h.in
@@ -243,6 +243,9 @@
 /* SQLite supports sqlite3_stmt */
 #undef HAVE_SQLITE3_STMT
 
+/* Some systems have SQLULEN parameters for SQLParamOptions */
+#undef HAVE_SQLPARAMOPTIONS_ULEN
+
 /* Some systems have SQLROWSETSIZE */
 #undef HAVE_SQLROWSETSIZE
 
