create sqlrimport class and update sqlrimportcsv/xml to inherit from it update sqlr-import to use this

--- a/src/api/c++/Makefile
+++ b/src/api/c++/Makefile
@@ -5,11 +5,13 @@ include ../../../config.mk
 SRCS = sqlrconnection.cpp \
 	sqlrcursor.cpp \
 	sqlrresultsetdomnode.cpp \
+	sqlrimport.cpp \
 	sqlrimportxml.cpp \
 	sqlrimportcsv.cpp
 LOBJS = sqlrconnection.$(OBJ) \
 	sqlrcursor.$(OBJ) \
 	sqlrresultsetdomnode.$(OBJ) \
+	sqlrimport.$(OBJ) \
 	sqlrimportxml.$(OBJ) \
 	sqlrimportcsv.$(OBJ)
 
