added some debug

--- a/src/api/jdbc/Makefile
+++ b/src/api/jdbc/Makefile
@@ -2,7 +2,8 @@ top_builddir = ../../..
 
 include ../../../config.mk
 
-SRCS = com$(SLASH)firstworks$(SLASH)sql$(SLASH)SQLRelayConnection.java \
+SRCS = com$(SLASH)firstworks$(SLASH)sql$(SLASH)SQLRelayDebug.java \
+	com$(SLASH)firstworks$(SLASH)sql$(SLASH)SQLRelayConnection.java \
 	com$(SLASH)firstworks$(SLASH)sql$(SLASH)SQLRelayDriver.java \
 	com$(SLASH)firstworks$(SLASH)sql$(SLASH)SQLRelayDatabaseMetaData.java \
 	com$(SLASH)firstworks$(SLASH)sql$(SLASH)SQLRelayStatement.java \
