--- a/test/sqlrelay.conf.in
+++ b/test/sqlrelay.conf.in
@@ -15,7 +15,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="host=mysql;user=testuser;password=testpassword;db=@HOSTNAME@;foundrows=yes"/>
+			<connection string="host=mysql;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@;foundrows=yes"/>
 		</connections>
 	</instance>
 
@@ -24,7 +24,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="host=postgresql;user=testuser;password=testpassword;db=@HOSTNAME@;lastinsertidfunction=testfunc();typemangling=lookup;tablemangling=lookup"/>
+			<connection string="host=postgresql;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@;lastinsertidfunction=testfunc();typemangling=lookup;tablemangling=lookup"/>
 		</connections>
 	</instance>
 
@@ -42,7 +42,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="freetds=/usr/local/firstworks/etc/sqlrelay.conf.d/freetds;server=sap;user=testuser;password=testpassword;db=@HOSTNAME@"/>
+			<connection string="freetds=/usr/local/firstworks/etc/sqlrelay.conf.d/freetds;server=sap;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@"/>
 		</connections>
 	</instance>
 
@@ -51,7 +51,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="sybase=/opt/sap;lang=en_US;server=SAP;user=testuser;password=testpassword;db=@HOSTNAME@"/>
+			<connection string="sybase=/opt/sap;lang=en_US;server=SAP;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@"/>
 		</connections>
 	</instance>
 
@@ -69,7 +69,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="user=testuser;password=testpassword;db=firebird:/u02/@HOSTNAME@.gdb;dialect=3"/>
+			<connection string="user=@HOSTNAME@;password=testpassword;db=firebird:/u02/@HOSTNAME@.gdb;dialect=3"/>
 		</connections>
 	</instance>
 
@@ -87,7 +87,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="informixdir=/opt/informix;servername=ol_informix1210;user=testuser;password=testpassword;db=@HOSTNAME@"/>
+			<connection string="informixdir=/opt/informix;servername=ol_informix1210;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@"/>
 		</connections>
 	</instance>
 
@@ -96,7 +96,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="host=mysqlmaster;user=testuser;password=testpassword;db=@HOSTNAME@"/>
+			<connection string="host=mysqlmaster;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@"/>
 		</connections>
 	</instance>
 
@@ -105,7 +105,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="host=mysqlslave;user=testuser;password=testpassword;db=@HOSTNAME@"/>
+			<connection string="host=mysqlslave;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@"/>
 		</connections>
 	</instance>
 
@@ -266,7 +266,7 @@
 			<logger module="slowqueries"/>
 		</loggers>
 		<connections>
-                        <connection string="oracle_sid=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = oracle)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora1)));user=testuser;password=juijfqiimeht;lastinsertidfunction=last_insert_id();droptemptables=yes;faketransactionblocks=yes;autocommit=yes;fetchatonce=5;maxselectlistsize=-1;maxitembuffersize=6000" passwordencryptionid="rot16"/>
+                        <connection string="oracle_sid=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = oracle)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora1)));user=@HOSTNAME@;password=juijfqiimeht;lastinsertidfunction=last_insert_id();droptemptables=yes;faketransactionblocks=yes;autocommit=yes;fetchatonce=5;maxselectlistsize=-1;maxitembuffersize=6000" passwordencryptionid="rot16"/>
 		</connections>
 	</instance>
 
@@ -281,7 +281,7 @@
 			<user user="client.localdomain"/>
 		</users>
 		<connections>
-                        <connection string="oracle_sid=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = oracle)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora1)));user=testuser;password=testpassword"/>
+                        <connection string="oracle_sid=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = oracle)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora1)));user=@HOSTNAME@;password=testpassword"/>
 		</connections>
 	</instance>
 
@@ -295,7 +295,7 @@
 			</auth>
 		</auths>
 		<connections>
-			<connection string="host=mysql;user=testuser;password=testpassword;db=@HOSTNAME@;foundrows=yes"/>
+			<connection string="host=mysql;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@;foundrows=yes"/>
 		</connections>
 	</instance>
 
