--- a/test/sqlrelay.conf.in
+++ b/test/sqlrelay.conf.in
@@ -15,7 +15,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="host=mysql;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@;foundrows=yes"/>
+			<connection string="host=mysql;user=testuser;password=testpassword;db=@HOSTNAME@;foundrows=yes"/>
 		</connections>
 	</instance>
 
@@ -24,7 +24,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="host=postgresql;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@;lastinsertidfunction=testfunc();typemangling=lookup;tablemangling=lookup"/>
+			<connection string="host=postgresql;user=testuser;password=testpassword;db=@HOSTNAME@;lastinsertidfunction=testfunc();typemangling=lookup;tablemangling=lookup"/>
 		</connections>
 	</instance>
 
@@ -42,7 +42,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="freetds=/usr/local/firstworks/etc/sqlrelay.conf.d/freetds;server=sap;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@"/>
+			<connection string="freetds=/usr/local/firstworks/etc/sqlrelay.conf.d/freetds;server=sap;user=testuser;password=testpassword;db=@HOSTNAME@"/>
 		</connections>
 	</instance>
 
@@ -51,7 +51,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="sybase=/opt/sap;lang=en_US;server=SAP;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@"/>
+			<connection string="sybase=/opt/sap;lang=en_US;server=SAP;user=testuser;password=testpassword;db=@HOSTNAME@"/>
 		</connections>
 	</instance>
 
@@ -69,7 +69,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="user=@HOSTNAME@;password=testpassword;db=firebird:/u02/@HOSTNAME@.gdb;dialect=3"/>
+			<connection string="user=testuser;password=testpassword;db=firebird:/u02/@HOSTNAME@.gdb;dialect=3"/>
 		</connections>
 	</instance>
 
@@ -87,7 +87,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="informixdir=/opt/informix;servername=ol_informix1210;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@"/>
+			<connection string="informixdir=/opt/informix;servername=ol_informix1210;user=testuser;password=testpassword;db=@HOSTNAME@"/>
 		</connections>
 	</instance>
 
@@ -96,7 +96,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="host=mysqlmaster;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@"/>
+			<connection string="host=mysqlmaster;user=testuser;password=testpassword;db=@HOSTNAME@"/>
 		</connections>
 	</instance>
 
@@ -105,7 +105,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="host=mysqlslave;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@"/>
+			<connection string="host=mysqlslave;user=testuser;password=testpassword;db=@HOSTNAME@"/>
 		</connections>
 	</instance>
 
@@ -295,7 +295,7 @@
 			</auth>
 		</auths>
 		<connections>
-			<connection string="host=mysql;user=@HOSTNAME@;password=testpassword;db=@HOSTNAME@;foundrows=yes"/>
+			<connection string="host=mysql;user=testuser;password=testpassword;db=@HOSTNAME@;foundrows=yes"/>
 		</connections>
 	</instance>
 
