--- a/test/testall.sh.in
+++ b/test/testall.sh.in
@@ -4,14 +4,15 @@
 # tee output to testdetails.log
 if ( test "$CHILD" != "1" )
 then
-	FIFO=testall.fifo
-	rm -f $FIFO
-	mkfifo $FIFO
-	CHILD=1 $0 $* > $FIFO 2>&1 &
+	#FIFO=testall.fifo
+	#rm -f $FIFO
+	#mkfifo $FIFO
+	#CHILD=1 $0 $* > $FIFO 2>&1 &
+	CHILD=1 $0 2>&1 | tee testdetails.log &
 	PID=$!
-	tee testdetails.log <$FIFO &
+	#tee testdetails.log <$FIFO &
 	wait $PID
-	rm -f $FIFO
+	#rm -f $FIFO
 	exit $?
 fi
 
